# robot-for-ig-followers

./: .env  .gitignore  README.md  main.py  pyproject.toml
automation/: clear_message_direct.py  follow_people.py  unfollow_people.py
utils/: logging.py  progress.py  settings.py
